--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Patrick+Hand|Lobster'%>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
