--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>App</title>
+  <meta property="og:url"           content="http://art-draw.herokuapp.com"/>
+  <meta property="og:title"         content="Art Draw" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:description"   content="Create awesome doodles with your friends, for free!" />
+  <meta property="og:image"         content="http://i.imgur.com/S7uXvPR.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Patrick+Hand|Lobster'%>
