--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -22,7 +22,7 @@
     <% end %>
   </h1>
 </div>
-<div class="center jumbotron" style="background-color: #9edeff">
+<div class="center jumbotron" style="background-color: #f586ff">
   <%= image_tag("how.png", :id=>"how") %>
   <%= image_tag("doodles.png", :id=>"doodle") %>
   <h3>Your friend sends you an image, then you transform it using our drawing canvas.</h3> 
