--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -113,7 +113,7 @@ input[type=submit] {
     color: white;
     font-size: 24px;
     margin-top: 20px;
-    background: cornflowerblue;
+    background: darkorchid;
     max-width: 400px;
 }
 
@@ -121,7 +121,7 @@ input[type=submit] {
     color: white;
     font-size: 24px;
     margin-top: 20px;
-    background: cornflowerblue;
+    background: darkorchid;
     max-width: 400px;
 }
 
