--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -20,8 +20,6 @@
     font-size: 8pt;
     height: 10px;
     margin-top: 12px;
-    // border: 2px #7e7e7e solid;
-    // border-radius: 8px;
     background-color: lightgrey;
 }
 
@@ -74,7 +72,7 @@
 @media (max-width: 768px) {
     
 body {
-    background-color: #9edeff;
+    background-color: plum;
 }
 
 .submission {
@@ -189,7 +187,7 @@ canvas {
 }
 
 body {
-    background-color: #9edeff;
+    background-color: plum;
 }    
 
 }
