fixed title tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App</title>
+  <title>Art Draw</title>
   <meta property="og:title"         content="Art Draw" />
   <meta property="og:type"          content="website" />
   <meta property="og:description"   content="Create awesome doodles with your friends, for free!" />
