playing more with meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Art Draw</title>
-  <meta property="og:title"         content="Art Draw" />
+  <meta property="og:title"         content="Check out this game on Art Draw" />
   <meta property="og:type"          content="website" />
-  <meta property="og:description"   content="Create awesome doodles with your friends, for free!" />
+  <meta property="og:description"   content="Play the game of collaborative doodling today!" />
   <meta property="og:image"         content="http://i.imgur.com/S7uXvPR.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
