--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -72,7 +72,7 @@
 @media (max-width: 768px) {
     
 body {
-    background-color: plum;
+    background-color: #ffaaff;
 }
 
 .submission {
@@ -187,7 +187,7 @@ canvas {
 }
 
 body {
-    background-color: plum;
+    background-color: #ffaaff;
 }    
 
 }
