--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,7 +1,7 @@
 <style>
   @media (max-width: 768px) {
     body {
-      background-color: #ffaaff;
+      background-color: #ad85ff;
     }
     
     .item {
