--- a/app/views/games/_showform.html.erb
+++ b/app/views/games/_showform.html.erb
@@ -1,3 +1,4 @@
+
 <style>
 h1 {
   padding-bottom: 20px;
@@ -37,8 +38,13 @@ function fbShare() {
   });
 }
 
+function wbShare(){
+  
+}
+ 
 
 </script>
+
 <%= form_for(@game) do |f| %>
   <% if @game.errors.any? %>
     <div id="error_explanation">
@@ -61,10 +67,11 @@ function fbShare() {
         <div style="display: none" class="color" id="5"></div>
         <div style="display: none" class="color" id="6"></div>
         <div class="button" id="facebook" onclick="fbShare()"></div>
+        <div class="button" id="weibo" ><%link_to "http://service.weibo.com/share/share.php?url=http://art-draw-public-bluyam.c9users.io&appkey=3148275279&title=Description&pic=&relatedUid=&language=zh_cn&redirect_uri=http://art-draw-public-bluyam.c9users.io"%></div>
+
         <!--<div class="button" id="weibo"></div>-->
     </div>
   </div>
-  
   <div class="submission">
   
     <div class="field">
@@ -91,3 +98,4 @@ function fbShare() {
       
 <% end %>
 
+</html>
