--- a/app/views/games/_showform.html.erb
+++ b/app/views/games/_showform.html.erb
@@ -13,11 +13,11 @@ h1 {
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '215671282136073',
-      xfbml      : true,
-      version    : 'v2.8'
+      appId            : '215671282136073',
+      autoLogAppEvents : true,
+      xfbml            : true,
+      version          : 'v2.8'
     });
-    FB.AppEvents.logPageView();
   };
   
 (function(d, s, id) {
@@ -29,18 +29,12 @@ h1 {
 }(document, 'script', 'facebook-jssdk'));
 
 function fbShare() {
-  FB.ui({
-  app_id:  215671282136073,
-  method: 'share',
-  href: window.location.href,
-  }, function(response){
-    window.close();
-  });
+  window.FB.ui({
+    method: 'share',
+    href: window.location.href,
+    });
 }
 
-function wbShare(){
-  
-}
  
 
 </script>
@@ -66,10 +60,7 @@ function wbShare(){
         <div style="display: none" class="color" id="4"></div>
         <div style="display: none" class="color" id="5"></div>
         <div style="display: none" class="color" id="6"></div>
-        <div class="button" id="facebook" onclick="fbShare()"></div>
-        <div class="button" id="weibo" ><%link_to "http://service.weibo.com/share/share.php?url=http://art-draw-public-bluyam.c9users.io&appkey=3148275279&title=Description&pic=&relatedUid=&language=zh_cn&redirect_uri=http://art-draw-public-bluyam.c9users.io"%></div>
-
-        <!--<div class="button" id="weibo"></div>-->
+        <div class="button" id="facebook" onclick=""></div>
     </div>
   </div>
   <div class="submission">
